<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">SWADroid</string>
    <string name="serverName_preferences">Server</string>
    <string name="logout_preferences">Log Out of SWADroid</string>
    <string name="logout_title_preferences">Log Out</string>
    <string name="serverSummary_preferences">Server (without http://)</string>
    <string name="serverTitle_preferences">Server</string>
    <string name="loginModuleLabel">Login</string>
    <string name="notificationsModuleLabel">Notifications</string>
    <string name="notificationsMarkAllAsReadModuleLabel">NotificationsMarkAsRead</string>
    <string name="coursesModuleLabel">Courses</string>
    <string name="testsModuleLabel">Tests</string>
    <string name="messagesModuleLabel">Send message</string>
    <string name="noticesModuleLabel">Publish notice</string>
    <string name="generateQRModuleLabel">Generate QR code</string>
    <string name="title_error_dialog">ERROR</string>
    <string name="close_dialog">Close</string>
    <string name="set_preferences">Preferences</string>
    <string name="user_preferences">User data</string>
    <string name="userIDName_preferences">User</string>
    <string name="userIDSummary_preferences">ID, Nickname or Email</string>
    <string name="userIDTitle_preferences">User</string>
    <string name="userPasswordName_preferences">Password</string>
    <string name="userPasswordSummary_preferences">Password</string>
    <string name="userPasswordTitle_preferences">Password</string>
    <string name="saveMsg_preferences">Preferences have been saved</string>
    <string name="saveSummary_preferences">Save current preferences</string>
    <string name="saveTitle_preferences">Save preferences</string>
    <string name="preferencesTitle_menu">Preferences</string>
    <string name="shareTitle_menu">Share SWADroid</string>
    <string name="rateTitle_menu">Rate</string>
    <string name="cleanDatabaseTitle_menu">Clean database</string>
    <string name="about_preferences">About</string>
    <string name="versionTitle_preferences">Application version</string>
    <string name="author_preferences">Coordinator: Antonio Cañas Vargas
        \nJuan Miguel Boyero Corral
        \nHelena Rodríguez Gijón
        \nAntonio Aguilera Malagón
    </string>
    <string name="author_title_preferences">Authors</string>
    <string name="loginTitle_menu">Login</string>
    <string name="loginProgressTitle">Login</string>
    <string name="loginProgressDescription">Connecting&#8230;</string>
    <string name="recoverPasswordProgressTitle">Recover password</string>
    <string name="recoverPasswordProgressDescription">Connecting&#8230;</string>
    <string name="coursesProgressTitle">Courses</string>
    <string name="coursesProgressDescription">Retrieving courses&#8230;</string>
    <string name="notificationsProgressTitle">Notifications</string>
    <string name="notificationsProgressDescription">Retrieving new notifications&#8230;</string>
    <string name="notificationsEmptyListMsg">Did not download any notification.\n\nTo download most recent
        notifications slide down this message.
    </string>
    <string name="notificationsDownloadedMsg">Notifications downloaded</string>
    <string name="testsDownloadProgressTitle">Tests</string>
    <string name="testsDownloadProgressDescription">Synchronizing test questions.\n\nDepending on the number of
        questions to synchronize, the data processing can take several minutes.\n\nPlease wait&#8230;</string>
    <string name="errorMsgLaunchingActivity">An error occurred during the execution of the
        operation
    </string>
    <string name="errorMsgWorkaroundEmulator">Damn. That Android emulator bug appeared again.
        Retrying&#8230;</string>
    <string name="errorMsgNoConnection">No connection found</string>
    <string name="errorCopyMsg_DB">Error copying database</string>
    <string name="upgradeMsg_DB">Upgrading database&#8230;</string>
    <string name="loginSuccessfulMsg">Login successful</string>
    <string name="examAnnouncement">Exam announcement</string>
    <string name="marksFile">Marks file</string>
    <string name="notice">Notice</string>
    <string name="message">Message</string>
    <string name="forumPostCourse">Forum message</string>
    <string name="forumReply">Forum reply</string>
    <string name="content">Content</string>
    <string name="messages">Messages</string>
    <string name="evaluation">Evaluation</string>
    <string name="assignment">Assignment</string>
    <string name="survey">Survey</string>
    <string name="documentFile">Document</string>
    <string name="sharedFile">Shared document</string>
    <string name="enrollment">Enrollment</string>
    <string name="enrollmentRequest">Enrollment request</string>
    <string name="unknownNotification">Unknown notification</string>
    <string name="fromMsg">From</string>
    <string name="dateMsg">Date</string>
    <string name="noSubjectMsg">No subject</string>
    <string name="noContentMsg">No content</string>
    <string name="yesMsg">Yes</string>
    <string name="noMsg">No</string>
    <string name="trueMsg">True</string>
    <string name="falseMsg">False</string>
    <string name="acceptMsg">OK</string>
    <string name="cancelMsg">Cancel</string>
    <string name="allMsg">All</string>
    <string name="selectCourseTitle">Select course</string>
    <string name="noCourseSelectedMsg">You must select a course to download tests</string>
    <string name="noQuestionsAvailableTestsDownloadMsg">There are no questions available for this course</string>
    <string name="noQuestionsPluggableTestsDownloadMsg">The teacher does not allows the questions download</string>
    <string name="questionsTestsDownloadSuccesfulMsg">Questions downloaded successfully</string>
    <string name="testNoQuestionsCourseMsg">Not downloaded any test question for this course</string>
    <string name="testNoQuestionsMsg">Before performing a test you should download the test questions for at least
        one course
    </string>
    <string name="testNoQuestionsMeetsSpecifiedCriteriaMsg">There is no question that meets the specified
        criteria
    </string>
    <string name="testNumQuestionsMsg">Indicate the number of test questions</string>
    <string name="testTagsMsg">Select the tags that will be included in the test</string>
    <string name="testNoTagsSelectedMsg">You must select at least one tag</string>
    <string name="testAnswerTypesMsg">Select the answer types that will be included in the test</string>
    <string name="testNoAnswerTypesSelectedMsg">You must select at least one answer type</string>
    <string name="testEvaluateMsg">Evaluate</string>
    <string name="testResultsTextMsg">Score</string>
    <string name="testShowResultsMsg">Show totals</string>
    <string name="testShowResultsDetailsMsg">Show details</string>
    <string name="testNoDetailsMsg">The teacher does not allow to see the details</string>
    <string name="testNoResultsMsg">The teacher does not allow to see the results</string>
    <string name="firstRunMsg">Before using the application for the first time you
        must enter the user name and password for SWAD at the setup
        screen.\n\nYou can access to the setup screen from the application
        menu anytime.\n\nDo you want to open the configuration screen now?
    </string>
    <string name="initialDialogTitle">IMPORTANT</string>
    <string name="upgradeMsg">Due to changes in the database all data have been deleted.\n\nSorry.</string>
    <string name="errorBadLoginMsg">Username or password incorrect</string>
    <string name="errorServerResponseMsg">Error in server response</string>
    <string name="errorBadAppKeyMsg">Unknown application key. Please contact the developer</string>
    <string name="errorConnectionMsg">Error while connecting to server</string>
    <string name="errorTimeoutMsg">Timeout trying to connect to the server</string>
    <string name="errorServiceUnavailableMsg">SWAD is under maintenance right now. Please try again later</string>
    <string name="sendingMessageMsg">Sending message&#8230;</string>
    <string name="messageSendedMsg">Message sended successfully</string>
    <string name="messageSendErrorMsg">Error while sending the message. Check the data in the message fields</string>
    <string name="message_receivers_title">Receivers (separated by comma)</string>
    <string name="message_subject_title">Subject</string>
    <string name="message_body_title">Message</string>
    <string name="notice_body_title">Notice</string>
    <string name="publishingNotice">Publishing notice&#8230;</string>
    <string name="noticePublished">Notice published</string>
    <string name="noticeSendError">Error while publishing the new notice</string>
    <string name="sendMsg">Send</string>
    <string name="addRcv">Add Receivers</string>
    <string name="selectRcvModuleLabel">Select Receivers</string>
    <string name="filterUsersListModuleLabel">Filter Receivers</string>
	<string name="acceptFilters">Filter</string>
   	<string name="cancelFilters">Cancel</string>
    <string name="cleanDatabaseMsg">The database has been cleaned</string>
    <string name="shareBodyMsg">I\'m using #SWADroid in my Android mobile for access to
        the e-learning platform SWAD.\nGet it for free here:
        https://play.google.com/store/apps/details?id=es.ugr.swad.swadroid
    </string>
    <string name="marketURL">market://details?id=es.ugr.swad.swadroid</string>
    <string name="marketWebURL">http://goo.gl/Wgo1y</string>
    <string name="twitterURL">https://twitter.com/#!/SWADroid</string>
    <string name="facebookURL">https://www.facebook.com/SWADroid</string>
    <string name="googlePlusURL">http://goo.gl/kuezQ</string>
    <string name="mailingListURL">http://goo.gl/3A5iO</string>
    <string name="blogURL">http://swadroid.wordpress.com</string>
    <string name="twitterUser">\@SWADroid</string>
    <string name="twitterTitle">Twitter</string>
    <string name="facebookTitle">Facebook</string>
    <string name="googlePlusTitle">Google+</string>
    <string name="mailingListTitle">Mailing list</string>
    <string name="blogTitle">Blog</string>
    <string name="marketTitle">Google Play</string>
    <string name="prefCatSyncTitle">Synchronization</string>
    <string name="prefSyncTimeTitle">Synchronization frecuency</string>
    <string name="prefSyncTimeSummary">Synchronization frecuency of notifications</string>
    <string name="prefSyncTimeKey">prefSyncTime</string>
    <string name="prefSyncEnableTitle">Auto Sync</string>
    <string name="prefSyncEnableSummary">Enable auto sync</string>
    <string name="prefSyncEnableKey">prefSyncEnable</string>
    <string name="prefCatNotifTitle">Notifications</string>
    <string name="prefNotifLimitTitle">Notifications limit</string>
    <string name="prefNotifLimitDialogMessage">Select the max number of notifications to be stored:</string>
    <string name="prefNotifLimitSuffix">notifications</string>
    <string name="prefNotifLimitKey">prefNotifLimit</string>
    <string name="notificationsAlertTitle">SWADroid</string>
    <string name="notificationsAlertMsg">new notifications</string>
    <string name="footMessageMsg">Sended from</string>
    <string name="sessionCourseText">Course</string>
    <string name="sessionGroupText">Group</string>
    <string name="sessionEndText">End</string>
    <string name="sessionButtonCreate">Create</string>
    <string name="sessionSiteText">Site (optional)</string>
    <string name="sessionButtonCancel">Cancel</string>
    <string name="sessionStartText">Start</string>
    <string name="sessionDescriptionText">Description (optional)</string>
	<string name="Filters_All">All</string>
	<string name="Filters_Teachers">Teachers</string>
	<string name="Filters_Students">Students</string>
</resources>