<?xml version="1.0" encoding="UTF-8"?>

<PreferenceScreen
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:custom="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
            android:title="@string/user_preferences">
        <EditTextPreference
                android:name="@string/userIDName_preferences"
                android:defaultValue=""
                android:hint="@string/userIDSummary_preferences"
                android:key="userIDPref"
                android:title="@string/userIDTitle_preferences"/>
        <EditTextPreference
                android:name="@string/userPasswordName_preferences"
                android:defaultValue=""
                android:hint="@string/userPasswordSummary_preferences"
                android:key="userPasswordPref"
                android:password="true"
                android:title="@string/userPasswordTitle_preferences"/>
        <EditTextPreference
                android:name="@string/serverName_preferences"
                android:defaultValue=""
                android:hint="@string/serverSummary_preferences"
                android:key="serverPref"
                android:title="@string/serverTitle_preferences"/>
    </PreferenceCategory>
    <PreferenceCategory
            android:title="@string/prefCatNotifTitle">

        <es.ugr.swad.swadroid.widget.SeekBarDialogPreference
                android:key="@string/prefNotifLimitKey"
                android:dialogMessage="@string/prefNotifLimitDialogMessage"
                android:title="@string/prefNotifLimitTitle"
                android:defaultValue="25"
                android:max="100"
                custom:progressTextSuffix="@string/prefNotifLimitSuffix"
                custom:min="1"/>
    </PreferenceCategory>
    <PreferenceCategory
            android:title="@string/prefCatSyncTitle">
        <CheckBoxPreference
                android:title="@string/prefSyncEnableTitle"
                android:summary="@string/prefSyncEnableSummary"
                android:key="@string/prefSyncEnableKey"
                android:defaultValue="true"/>
        <ListPreference
                android:title="@string/prefSyncTimeTitle"
                android:summary="@string/prefSyncTimeSummary"
                android:key="@string/prefSyncTimeKey"
                android:entries="@array/prefSyncTimeEntries"
                android:entryValues="@array/prefSyncTimeValues"
                android:defaultValue="60"
                android:dependency="@string/prefSyncEnableKey"/>
    </PreferenceCategory>
    <PreferenceCategory
            android:title="@string/about_preferences">
        <Preference
                android:defaultValue=""
                android:key="ratePref"
                android:summary="@string/marketTitle"
                android:title="@string/rateTitle_menu"/>
        <Preference
                android:defaultValue=""
                android:key="sharePref"
                android:summary="@string/shareBodyMsg"
                android:title="@string/shareTitle_menu"/>
        <Preference
                android:defaultValue=""
                android:key="blogPref"
                android:summary="@string/blogURL"
                android:title="@string/blogTitle"/>
        <Preference
                android:defaultValue=""
                android:key="twitterPref"
                android:summary="@string/twitterUser"
                android:title="@string/twitterTitle"/>
        <Preference
                android:defaultValue=""
                android:key="facebookPref"
                android:summary="@string/facebookURL"
                android:title="@string/facebookTitle"/>
        <Preference
                android:defaultValue=""
                android:key="googlePlusPref"
                android:summary="@string/googlePlusURL"
                android:title="@string/googlePlusTitle"/>
        <Preference
                android:defaultValue=""
                android:key="mailingListPref"
                android:summary="@string/mailingListURL"
                android:title="@string/mailingListTitle"/>
        <Preference
                android:defaultValue=""
                android:hint=""
                android:key="currentVersionPref"
                android:title="@string/versionTitle_preferences"/>
        <Preference
                android:defaultValue=""
                android:summary="@string/author_preferences"
                android:key="aboutPref"
                android:title="@string/author_title_preferences"/>
    </PreferenceCategory>

</PreferenceScreen>