<?xml version='1.0' encoding='UTF-8'?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent" android:layout_height="match_parent" android:gravity="center_vertical" android:orientation="vertical">

    <Button android:id="@+id/cancelFilters" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignParentBottom="true" android:layout_toRightOf="@+id/acceptFilters" android:text="@string/cancelFilters"/>

    <Button android:id="@+id/acceptFilters" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignParentBottom="true" android:layout_alignParentLeft="true" android:layout_marginLeft="90dp" android:text="@string/acceptFilters"/>

    <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignLeft="@+id/acceptFilters" android:layout_alignParentTop="true" android:orientation="vertical">

        <RadioGroup android:id="@+id/Filters_Users_Options" android:layout_width="wrap_content" android:layout_height="wrap_content">

            <RadioButton android:id="@+id/Filters_All" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/Filters_All"/>

            <RadioButton android:id="@+id/Filters_Teachers" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/Filters_Teachers"/>

            <RadioButton android:id="@+id/Filters_Students" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/Filters_Students"/>
        </RadioGroup>
    </LinearLayout>

</RelativeLayout>