<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:padding="3dip"
              android:background="@color/background">

     <EditText
             android:id="@+id/message_receivers_text"
             android:hint="@string/message_receivers_title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textColor="@color/foreground1">
     </EditText>

     <EditText
             android:id="@+id/message_subject_text"
             android:hint="@string/message_subject_title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textColor="@color/foreground1">
     </EditText>

     <EditText
             android:id="@+id/message_body_text"
             android:hint="@string/message_body_title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textColor="@color/foreground1">
     </EditText>

     <LinearLayout
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:gravity="center_horizontal">

         <Button
                 android:id="@+id/message_button_accept"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/sendMsg">
         </Button>
         <Button
                 android:id="@+id/message_button_cancel"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/cancelMsg">
         </Button>
     </LinearLayout>
</LinearLayout>