<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:swadroid="http://schemas.android.com/apk/res-auto" >

    <item
        android:id="@+id/action_evaluate"
        android:icon="@drawable/ic_action_accept"
        android:title="@string/testEvaluateMsg"
        android:visible="false"
        swadroid:showAsAction="ifRoom|withText"/>

    <item
        android:id="@+id/action_show_details"
        android:icon="@drawable/ic_action_refresh"
        android:title="@string/testShowResultsDetailsMsg"
        android:visible="false"
        swadroid:showAsAction="ifRoom|withText"/>

    <item
        android:id="@+id/action_show_totals"
        android:icon="@drawable/ic_action_read"
        android:title="@string/testShowResultsMsg"
        android:visible="false"
        swadroid:showAsAction="ifRoom|withText"/>

</menu>