<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/background">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:orientation="vertical"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:padding="3dip">

        <EditText
                android:id="@+id/notice_body_text"
                android:hint="@string/notice_body_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/foreground1">
        </EditText>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:gravity="center_horizontal">

            <Button
                    android:id="@+id/notice_button_accept"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sendMsg">
            </Button>
            <Button
                    android:id="@+id/notice_button_cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cancelMsg">
            </Button>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
